--- a/ejemplos/01-lista-letras-no-react/index.html
+++ b/ejemplos/01-lista-letras-no-react/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>1 - Lista Letras no React</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚛️</text></svg>">
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-<div id="root"></div>
+<div class="app" id="root"></div>
 <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/@babel/standalone@7.13.0/babel.js"></script>
