--- a/ejemplos/playground/index.html
+++ b/ejemplos/playground/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>2 - Lista Letras React</title>
+  <title>Jugando con Listas</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚛️</text></svg>">
   <link rel="stylesheet" href="../css/index.css">
 </head>
@@ -14,16 +14,19 @@
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/@babel/standalone@7.13.0/babel.js"></script>
 <script type="text/babel">
-  function MyList({ letters }) {
+  const letters = ['a', 'b', 'c', 'd'];
+  function MyList({ list }) {
     return (
-      <ul>{letters.map(letter => (
-        <li>{letter}</li>
-      ))}</ul>
+      <ul>
+      {list.map((letter, index) =>
+        (<li key={index}>{letter}</li>)
+      )}
+      </ul>
     );
   }
 
   const rootElement = document.getElementById('root');
-  ReactDOM.render(<MyList letters={['a', 'b', 'c', 'd']} />, rootElement);
+  ReactDOM.render(<MyList list={letters} />, rootElement);
 </script>
 </body>
 </html>
